# maui-booth

./: CMakeLists.txt  Messages.sh  README.md  org.kde.booth.appdata.xml  org.kde.booth.desktop  org.maui.booth.appdata.xml
android_files/: AndroidManifest.xml
po/ar/: booth.po
po/ca/: booth.po
po/ca@valencia/: booth.po
po/cs/: booth.po
po/de/: booth.po
po/en_GB/: booth.po
po/eo/: booth.po
po/es/: booth.po
po/eu/: booth.po
po/fi/: booth.po
po/fr/: booth.po
po/ga/: booth.po
po/gl/: booth.po
po/he/: booth.po
po/it/: booth.po
po/ja/: booth.po
po/ka/: booth.po
po/ko/: booth.po
po/lt/: booth.po
po/lv/: booth.po
po/my/: booth.po
po/nl/: booth.po
po/nn/: booth.po
po/pa/: booth.po
po/pl/: booth.po
po/pt/: booth.po
po/pt_BR/: booth.po
po/sa/: booth.po
po/sk/: booth.po
po/sl/: booth.po
po/sv/: booth.po
po/tr/: booth.po
po/ug/: booth.po
po/uk/: booth.po
po/zh_CN/: booth.po
po/zh_TW/: booth.po
src/: CMakeLists.txt  main.cpp  main.qml  org.maui.booth.desktop  qml.qrc
src/android/: AndroidManifest.xml
src/android_files/: AndroidManifest.xml
src/assets/: assets.qrc
src/views/: CameraPage.qml
src/views/roll/: RollView.qml
src/widgets/: PhotoCaptureControls.qml  VideoCaptureControls.qml
